fixed for header icons and gap

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -27,11 +27,11 @@
 }
 
 .socials {
-    @apply flex flex-row justify-end items-center gap-3;
+    @apply flex flex-row justify-end items-center gap-4;
 }
 
 .icon {
-    @apply text-xl md:text-2xl;
+    @apply text-2xl md:text-3xl;
 }
 
 .mobile-menu {
